# TorchML-dev

./: .gitignore  CMakeLists.txt  Dockerfile  KnownIssues.md  MLModel.cpp  MLModel.hpp  README.md  TorchMLModel.cpp  TorchMLModel.hpp  TorchMLModelDriver.cpp  TorchMLModelDriver.hpp  TorchMLModelDriverImplementation.cpp  TorchMLModelDriverImplementation.hpp  TorchMLModelImplementation.cpp  TorchMLModelImplementation.hpp  install_dependencies.sh  kimspec.edn  ml_model.cpp  ml_model.hpp
MLModel/: CMakeLists.txt  MLModel.cpp  MLModel.hpp  ml_model.cpp
conda_dependency_packages/torch-scatter-sparse-kim/: meta.yaml  post-link.sh  pre-unlink.sh
conda_dependency_packages/torch-scatter-sparse-kim-cpu/: build.sh  meta.yaml  post-link.sh
docs/: Doxyfile.in
docs/doxygen-custom/: header.html
torch_geometric_dependencies/: example_source.sh  make_pyg.sh  make_pyg_cuda.sh
